syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetAllBooks (Empty) returns (BookReplyList);
  rpc GetAllBooksFiltered (BooksRequest) returns (BookReplyList);
  rpc ReturnBook (ReturnBookRequest) returns (BookResponse);
  rpc BuyBook(BuyBookRequest) returns(BookResponse);
}

message BuyBookRequest {
	int32 StudentId = 1;
	int32 BookId = 2;
}

message Empty{}

message BookReply {
	string Subject = 1;
	string Title = 2;
	string Author = 3;
	double Price = 4;
	string ReleaseDate = 5;
	bool IsAvaible = 6;
	int32 StudyProgrammeId = 7;
}

message BookResponse {
	bool IsSucces = 1;
}

message BookReplyList{
	repeated BookReply bookReply = 1;
}

message BooksRequest {
	string Subject = 1;
	double Budget = 2;
}

message ReturnBookRequest {
	int32 BookId = 1;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}